--- a/templates/pcQueryMsg.html
+++ b/templates/pcQueryMsg.html
@@ -12,7 +12,7 @@
                 <li class="items-header flexrow">
                     <div class="item-name flexrow">
                         <div class="item-image" style="background-image: url('{{actor.data.img}}')"></div>
-                        <h3>{{actor.data.name}}</h3>
+                        <h3>{{actor.data.name}} &lt;{{level}}&gt;</h3>
                     </div>
                 </li>
 
